<resources>
    <string name="app_name">LEADERBOARD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="learning_hours">%d learning hours, %s.</string>
    <string name="learning_skill">%d skill IQ Score, %s</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">Please wait.</string>
    <string name="invalid_data">Invalid data</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
    <string-array name="tabBar">
        <item>Learning Learders</item>
        <item>Skill IQ Learders</item>
    </string-array>
</resources>